<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_image"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/filterTitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filters_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <CheckBox
            android:id="@+id/watercolor_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_watercolor" />

        <CheckBox
            android:id="@+id/grayScale_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_grayscale" />

        <CheckBox
            android:id="@+id/blur_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_blur" />

        <TextView
            android:id="@+id/destinationTitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/destinations_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <RadioGroup
            android:id="@+id/destination_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/save_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/destination_save" />

            <RadioButton
                android:id="@+id/upload_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_upload" />
        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp">

            <ProgressBar
                android:id="@+id/progress_horizontal"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:visibility="visible" />

            <Button
                android:id="@+id/go_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/go"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/progress_horizontal" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:visibility="gone"
                app:layout_constraintLeft_toRightOf="@id/go_button"
                app:layout_constraintRight_toLeftOf="@+id/output_button"
                app:layout_constraintTop_toTopOf="@id/go_button"
                tools:visibility="visible" />

            <Button
                android:id="@+id/output_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output"
                android:visibility="gone"
                app:layout_constraintLeft_toRightOf="@id/cancel_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/cancel_button"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>